--- a/streampipes-backend/pom.xml
+++ b/streampipes-backend/pom.xml
@@ -63,6 +63,10 @@
 
         <!-- External dependencies -->
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
