--- a/pom.xml
+++ b/pom.xml
@@ -423,6 +423,11 @@
             </dependency>
             <dependency>
                 <groupId>org.eclipse.rdf4j</groupId>
+                <artifactId>rdf4j-sail-nativerdf</artifactId>
+                <version>${rdf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.rdf4j</groupId>
                 <artifactId>rdf4j-rio-api</artifactId>
                 <version>${rdf4j.version}</version>
             </dependency>
