streampipes/ce#301: Update Flink docker images

--- a/services/taskmanager/docker-compose.yml
+++ b/services/taskmanager/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   taskmanager:
-    image: flink:1.8.0-scala_2.11-alpine
+    image: flink:1.9.1-scala_2.11
     depends_on:
       - jobmanager
     command: taskmanager
