--- a/services/jobmanager/docker-compose.yml
+++ b/services/jobmanager/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   jobmanager:
-    image: flink:1.8.0-scala_2.11-alpine
+    image: flink:1.9.1-scala_2.11
     ports:
       - "8081:8081"
       - "6123:6123"
