--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -159,6 +159,11 @@ finish release:
   except:
     - master
 
+docker-pe-all-jvm:
+  <<: *docker_script
+  variables:
+    CONTAINER_NAME: "pipeline-elements-all-jvm"
+
 docker-processors-aggregation-flink:
     <<: *docker_script
     variables:
@@ -254,12 +259,15 @@ docker-sources-vehicle-simulator:
     variables:
       CONTAINER_NAME: "sources-vehicle-simulator"
 
-
 docker-sources-watertank-simulator:
     <<: *docker_script
     variables:
       CONTAINER_NAME: "sources-watertank-simulator"
 
+docker-hub-pe-all-jvm:
+  <<: *docker_hub_script
+  variables:
+    CONTAINER_NAME: "pipeline-elements-all-jvm"
 
 docker-hub-processors-aggregation-flink:
     <<: *docker_hub_script
