--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <module>streampipes-processors-image-processing-jvm</module>
         <module>streampipes-processors-transformation-jvm</module>
         <module>streampipes-pipeline-elements-all-jvm</module>
+        <module>streampipes-pipeline-elements-data-simulator</module>
     </modules>
 
     <properties>
@@ -61,7 +62,7 @@
         <amqp-client.version>4.1.0</amqp-client.version>
         <boofcv.version>0.33</boofcv.version>
         <commons-math3.version>3.6.1</commons-math3.version>
-        <data-generator.version>1.3.1</data-generator.version>
+        <data-generator.version>1.4.1</data-generator.version>
         <google-maps-services.version>0.10.0</google-maps-services.version>
         <iotdb.version>0.8.0</iotdb.version>
         <language-detector.version>0.6</language-detector.version>
@@ -73,8 +74,12 @@
         <opennlp.version>1.9.0</opennlp.version>
         <postgresql.version>42.2.2</postgresql.version>
         <pulsar.version>2.4.1</pulsar.version>
+        <scala-lang.version>2.11.12</scala-lang.version>
+        <scala-parser-combinators.version>1.1.1</scala-parser-combinators.version>
         <slack-api.version>0.5.1</slack-api.version>
+        <snakeyaml.version>1.25</snakeyaml.version>
         <xerces.version>2.9.1</xerces.version>
+        <zstd-jni.version>1.4.3-1</zstd-jni.version>
 
         <maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
     </properties>
@@ -170,6 +175,11 @@
 
             <!-- External dependencies -->
             <dependency>
+                <groupId>com.github.luben</groupId>
+                <artifactId>zstd-jni</artifactId>
+                <version>${zstd-jni.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.maps</groupId>
                 <artifactId>google-maps-services</artifactId>
                 <version>${google-maps-services.version}</version>
@@ -230,6 +240,11 @@
                 <version>${flink.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-runtime_2.11</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
@@ -270,6 +285,21 @@
                 <version>${postgresql.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-library</artifactId>
+                <version>${scala-lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scala-lang.modules</groupId>
+                <artifactId>scala-parser-combinators_2.11</artifactId>
+                <version>${scala-parser-combinators.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
                 <version>${xerces.version}</version>
@@ -289,11 +319,17 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-test-utils_2.11</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.streampipes</groupId>
                 <artifactId>streampipes-test-utils</artifactId>
                 <version>${streampipes.version}</version>
                 <scope>test</scope>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
