--- a/streampipes-sinks-databases-flink/pom.xml
+++ b/streampipes-sinks-databases-flink/pom.xml
@@ -88,6 +88,10 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-to-slf4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
