--- a/streampipes-sources-vehicle-simulator/pom.xml
+++ b/streampipes-sources-vehicle-simulator/pom.xml
@@ -27,6 +27,12 @@
     <artifactId>streampipes-sources-vehicle-simulator</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.streampipes</groupId>
+            <artifactId>streampipes-pipeline-elements-data-simulator</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.streampipes</groupId>
@@ -74,10 +80,6 @@
         </dependency>
 
         <!-- External dependencies -->
-        <dependency>
-            <groupId>net.acesinc.data</groupId>
-            <artifactId>json-data-generator</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
