--- a/streampipes-sources-watertank-simulator/pom.xml
+++ b/streampipes-sources-watertank-simulator/pom.xml
@@ -28,6 +28,12 @@
     <artifactId>streampipes-sources-watertank-simulator</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.streampipes</groupId>
+            <artifactId>streampipes-pipeline-elements-data-simulator</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.streampipes</groupId>
@@ -75,24 +81,6 @@
         </dependency>
 
         <!-- External dependencies -->
-        <dependency>
-            <groupId>net.acesinc.data</groupId>
-            <artifactId>json-data-generator</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.eclipse.jetty</groupId>
-                    <artifactId>jetty-server</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.hibernate</groupId>
-                    <artifactId>hibernate-validator</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.validation</groupId>
-                    <artifactId>validation-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
     </dependencies>
 
     <build>
@@ -105,6 +93,9 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
+                        <configuration>
+                            <mainClass>org.streampipes.sources.watertank.simulator.WatertankSimulatorInit</mainClass>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
