--- a/services/activemq/docker-compose.yml
+++ b/services/activemq/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   activemq:
-    image: streampipes/activemq
+    image: streampipes/activemq:5.15.9
     ports:
       - "61616:61616"
       - "61614:61614"
