--- a/services/kafka/docker-compose.yml
+++ b/services/kafka/docker-compose.yml
@@ -4,14 +4,23 @@ services:
     image: wurstmeister/kafka:2.12-2.2.0
     hostname: kafka
     ports:
-      - "9092:9092"
+      - "9094:9094"
     depends_on:
       - zookeeper
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://${SP_HOST}:9092
-      KAFKA_ADVERTISED_HOST_NAME: ${SP_HOST}
-      KAFKA_ADVERTISED_PORT: 9092
+      # TODO: change named listener to INSIDE once kafka connect is done
+      # KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      # KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://localhost:9094 #(local, i.e. Single-Node with IDE + Docker)
+      # KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
+      # KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      #
+      #
+      # see: https://github.com/confluentinc/schema-registry/issues/648
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://:9092,OUTSIDE://localhost:9094 #(local, i.e. Single-Node with IDE + Docker)
+      KAFKA_LISTENERS: PLAINTEXT://:9092,OUTSIDE://:9094
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_MESSAGE_MAX_BYTES: 5000012
       KAFKA_FETCH_MESSAGE_MAX_BYTES: 5000012
