--- a/templates/docker-compose.full.yml
+++ b/templates/docker-compose.full.yml
@@ -11,7 +11,7 @@ services:
       - "1883:1883"
     networks:
       spnet:
-      
+
   consul:
     image: consul:1.6.0
     environment:
@@ -37,7 +37,7 @@ services:
     networks:
       spnet:
         ipv4_address: 172.31.0.9
-  
+
   couchdb:
     image: couchdb:2.3.1
     ports:
@@ -46,19 +46,28 @@ services:
       - couchdb:/opt/couchdb/data
     networks:
       spnet:
-            
+
   kafka:
     image: wurstmeister/kafka:2.12-2.2.0
     hostname: kafka
     ports:
-      - "9092:9092"
+      - "9094:9094"
     depends_on:
       - zookeeper
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://${SP_HOST}:9092
-      KAFKA_ADVERTISED_HOST_NAME: ${SP_HOST}
-      KAFKA_ADVERTISED_PORT: 9092
+      # TODO: change named listener to INSIDE once kafka connect is done
+      # KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      # KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://localhost:9094 #(local, i.e. Single-Node with IDE + Docker)
+      # KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
+      # KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      #
+      #
+      # see: https://github.com/confluentinc/schema-registry/issues/648
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://:9092,OUTSIDE://localhost:9094 #(local, i.e. Single-Node with IDE + Docker)
+      KAFKA_LISTENERS: PLAINTEXT://:9092,OUTSIDE://:9094
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_MESSAGE_MAX_BYTES: 5000012
       KAFKA_FETCH_MESSAGE_MAX_BYTES: 5000012
@@ -81,7 +90,7 @@ services:
       - KAFKA_REST_ZOOKEEPER_CONNECT=zookeeper:2181
     networks:
       spnet:
-      
+
   zookeeper:
     image: wurstmeister/zookeeper
     ports:
@@ -91,9 +100,9 @@ services:
       - zk-data:/opt/zookeeper-3.4.13/data
     networks:
       spnet:
-      
-      
-      
+
+
+
 #### StreamPipes services
 
   backend:
@@ -109,8 +118,8 @@ services:
       - backend:/root/.streampipes
       - backend:/streampipes-assets
     networks:
-      spnet:  
-      
+      spnet:
+
   connect-master:
     image: "${SP_REGISTRY_MAIN}/streampipes-connect-container:${SP_VERSION}"
     depends_on:
@@ -126,7 +135,7 @@ services:
     volumes:
       - connect:/data/
     networks:
-      spnet: 
+      spnet:
 
   connect-worker-main:
     image: "${SP_REGISTRY_CONNECT}/streampipes-connect-worker:${SP_VERSION}"
@@ -143,7 +152,7 @@ services:
       - connect:/data/
     networks:
       spnet:
-      
+
   nginx:
     image: "${SP_REGISTRY_UI}/ui:${SP_UI_VERSION}"
     ports:
@@ -166,28 +175,28 @@ services:
       - "consul"
     networks:
       spnet:
-      
+
   processors-filters-siddhi:
     image: "${SP_REGISTRY_PE}/processors-filters-siddhi:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-      
+
   processors-image-processing-jvm:
     image: "${SP_REGISTRY_PE}/processors-image-processing-jvm:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-      
+
   processors-transformation-jvm:
     image: "${SP_REGISTRY_PE}/processors-transformation-jvm:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-     
+
   sinks-brokers-jvm:
     image: "${SP_REGISTRY_PE}/sinks-brokers-jvm:${SP_VERSION}"
     depends_on:
@@ -201,7 +210,7 @@ services:
       - "consul"
     networks:
       spnet:
-      
+
   sinks-internal-jvm:
     image: "${SP_REGISTRY_PE}/sinks-internal-jvm:${SP_VERSION}"
     depends_on:
@@ -211,14 +220,14 @@ services:
       - SP_NGINX_HOST=${SP_HOST}
     networks:
       spnet:
-      
+
   sinks-notifications-jvm:
     image: "${SP_REGISTRY_PE}/sinks-notifications-jvm:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-      
+
   sources-watertank-simulator:
     image: "${SP_REGISTRY_PE}/sources-watertank-simulator:${SP_VERSION}"
     depends_on:
@@ -234,49 +243,49 @@ services:
       - "consul"
     networks:
       spnet:
-      
+
   processors-enricher-flink:
     image: "${SP_REGISTRY_PE}/processors-enricher-flink:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-      
+
   processors-pattern-detection-flink:
     image: "${SP_REGISTRY_PE}/processors-pattern-detection-flink:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-      
+
   processors-statistics-flink:
     image: "${SP_REGISTRY_PE}/processors-statistics-flink:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-      
+
   processors-transformation-flink:
     image: "${SP_REGISTRY_PE}/processors-transformation-flink:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-      
+
   sinks-databases-flink:
     image: "${SP_REGISTRY_PE}/sinks-databases-flink:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
       spnet:
-  
+
   sources-vehicle-simulator:
     image: "${SP_REGISTRY_PE}/sources-vehicle-simulator:${SP_VERSION}"
     depends_on:
       - "consul"
     networks:
-      spnet:    
-  
+      spnet:
+
 
 #### Full version service extensions
 
@@ -319,7 +328,7 @@ services:
       # sudo mkdir -p /srv/docker/influxdb/data
       - influx:/var/lib/influxdb
     networks:
-      spnet:   
+      spnet:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.2.3
@@ -348,7 +357,7 @@ services:
     ports:
       - "5601:5601"
     networks:
-      spnet:      
+      spnet:
 
   iotdb:
     image: xingtanzjr/iotdb
@@ -357,7 +366,7 @@ services:
     ports:
       - 6667:6667
     networks:
-      spnet:      
+      spnet:
 
 volumes:
   backend:
