Add some minor code style improvements

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ addons:
       - dev
 
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar --quiet
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package --quiet
 
