Change nexus snapshot server

--- a/pom.xml
+++ b/pom.xml
@@ -333,9 +333,9 @@
 
     <repositories>
         <repository>
-            <id>laus</id>
+            <id>ipe-nexus</id>
             <name>nexus repository</name>
-            <url>https://laus.fzi.de/nexus/content/repositories/public/</url>
+            <url>https://ipe-nexus.fzi.de/repository/maven-public/</url>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
@@ -354,9 +354,9 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
         <snapshotRepository>
-            <id>deployment</id>
+            <id>ipe-nexus</id>
             <name>Internal Releases</name>
-            <url>https://laus.fzi.de/nexus/content/repositories/snapshots/</url>
+            <url>https://ipe-nexus.fzi.de/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
