Change name of snapshot maven repo

--- a/pom.xml
+++ b/pom.xml
@@ -564,7 +564,7 @@
             <url>https://ipe-nexus.fzi.de/repository/maven-public/</url>
         </repository>
         <snapshotRepository>
-            <id>deployment</id>
+            <id>ipe-nexus</id>
             <name>Internal Releases</name>
             <url>https://ipe-nexus.fzi.de/repository/maven-snapshots/</url>
         </snapshotRepository>
