--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,6 @@ github:
     - docker login -u streampipesbuild -p $DOCKER_HUB_USER_PWD
     - docker build --no-cache --pull -t $DOCKER_HUB_IMAGE_NAME/$CONTAINER_NAME:latest -t $DOCKER_HUB_IMAGE_NAME/$CONTAINER_NAME:$MVN_VERSION ./streampipes-$CONTAINER_NAME/Dockerfile ./streampipes-$CONTAINER_NAME - docker push $DOCKER_HUB_IMAGE_NAME/$CONTAINER_NAME:$MVN_VERSION
     - docker push $DOCKER_HUB_IMAGE_NAME/$CONTAINER_NAME:latest
-  when: manual
   only:
     - master
 
@@ -99,7 +98,7 @@ deploy:
   script:
     - echo "$GPG_PRIVATE_KEY" | gpg --batch --import --passphrase "$GPG_PASSPHRASE"
     - echo "$MAVEN_CREDENTIALS" > /root/.m2/settings.xml
-    - mvn deploy -DskipTests
+    - mvn deploy -DskipTests -Denforcer.skip
   artifacts:
     paths:
       - ./**/*.jar
